# test_fastapi

./: .gitignore  db.py  init_db.py  pyproject.toml  server.py
db/: __init__.py  core.py  posts.py  product.py  users.py
routes/: posts.py  product.py  users.py
src/: init_db.py  server.py
