[project]
name = "fastapi-db"
version = "0.1.0"
description = "FastAPI application with MySQL database integration"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "mysql-connector-python>=8.0.26",
    "python-dotenv>=0.19.0",
    "fastapi-cli>=0.0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["fastapi_db"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.hatch.build.targets.wheel]
packages = ["."]
